# hosxp-drug-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: ConnectionSettings.vue  DrugSearchBar.vue  DrugTrendChart.vue  SummaryKpiBar.vue  TopDrugsPanel.vue  YearSelector.vue
src/composables/: useDrugData.ts
src/stores/: dashboard.ts  dbConfig.ts
src/styles/: peach-theme.css
src/utils/: ceDate.ts
