[package]
name = "hosxp-drug-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "hosxp_drug_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
