[package]
name = "hosxp-drug-dashboard"
version = "0.1.0"
edition = "2024"
description = "HosXP drug-dispensing dashboard — Tauri backend (MySQL queries, caching, IPC commands)"

[lib]
name = "hosxp_drug_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] } # generates Tauri platform glue at build time

[dependencies]
tauri = { version = "2", features = [] }              # desktop app framework / IPC runtime
tauri-plugin-shell = "2"                              # exposes shell commands to the frontend
serde = { version = "1", features = ["derive"] }      # serialization for IPC payloads
serde_json = "1"                                      # JSON encode/decode (Tauri IPC transport)
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] } # async MySQL driver
tokio = { version = "1", features = ["full"] }        # async runtime
